[package]
name = "iced_blur"
version = "0.1.0"
edition = "2024"
authors = ["Richard Custodio <richardcustodio@pm.me>"]
description = "a blur widget for iced"
license = "MIT"

[workspace]
members = ["examples/*"]

[dependencies]
iced_core = { git = "https://github.com/derezzedex/iced", rev = "8c519aa04e4761d38893a4d6d3d443f139fa5b79" }
iced_widget = { git = "https://github.com/derezzedex/iced", rev = "8c519aa04e4761d38893a4d6d3d443f139fa5b79", features = ["wgpu"]}
bytemuck = { version = "1.0", features = ["derive"] }