[package]
name = "iced_blur"
version = "0.1.0"
edition = "2024"
authors = ["Richard Custodio <richardcustodio@pm.me>"]
description = "a blur widget for iced"
license = "MIT"

[workspace]
members = ["examples/*"]

[dependencies]
iced_core = { git = "https://github.com/derezzedex/iced", rev = "668ad0e1b34c54e98adbde6902743bf8b6d1f2b5" }
iced_widget = { git = "https://github.com/derezzedex/iced", rev = "668ad0e1b34c54e98adbde6902743bf8b6d1f2b5", features = ["wgpu"]}
bytemuck = { version = "1.0", features = ["derive"] }