[package]
name = "iced_blur"
version = "0.1.0"
edition = "2024"
authors = ["Richard Custodio <richardcustodio@pm.me>"]
description = "a blur widget for iced"
license = "MIT"

[workspace]
members = ["examples/*"]

[dependencies]
iced_core = { git = "https://github.com/derezzedex/iced", rev = "69e8cc2d33eae623cd900150627d1ad82cef678d" }
iced_widget = { git = "https://github.com/derezzedex/iced", rev = "69e8cc2d33eae623cd900150627d1ad82cef678d", features = ["wgpu"]}
bytemuck = { version = "1.0", features = ["derive"] }